syntax = "proto3";

package model;

option java_package = "com.durys.jakub.engagementservice.model";
option java_outer_classname = "EngagementProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service EngagementService {
  rpc FindAllByUser(google.protobuf.Int64Value) returns (Engagements) {}
  rpc FindById(google.protobuf.Int64Value) returns (Engagement) {}
}

message Engagement {
  int64 id = 1;
  int64 user_id = 2;
  google.protobuf.Timestamp from = 3;
  google.protobuf.Timestamp to = 4;
}

message Engagements {
  repeated Engagement engagement = 1;
}